<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtReservation"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtReserverTechnique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtReservertechnique"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnConfirmerResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/txtBtnConfirmer"
        android:textAlignment="center"
        android:textSize="20sp"
        app:backgroundTint="@color/vert"
        app:layout_constraintEnd_toStartOf="@+id/btnAnnulerResa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReserverTechnique" />

    <Button
        android:id="@+id/btnAnnulerResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="200dp"
        android:text="@string/txtBtnAnnuler"
        android:textAlignment="center"
        android:textSize="20sp"
        app:backgroundTint="@color/rouge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmerResa"
        app:layout_constraintTop_toBottomOf="@+id/txtReserverTechnique" />
</androidx.constraintlayout.widget.ConstraintLayout>