<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ligne_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/icon"
        android:contentDescription="@string/iconeLigne"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:id="@+id/linear_layout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titre"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/titreLigne"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtAnnee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:hint="Année"/>
        </LinearLayout>

        <TextView
            android:id="@+id/realisateur"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/realisateurLigne"
            android:paddingLeft="15dp">

        </TextView>
    </LinearLayout>


</LinearLayout>